# scheme-in-48-hours

./: README.md  hello.hs  notes.md  parser.hs  scheme48h.cabal
src/: AST.hs  Evaluator.hs  Main.hs  Parser.hs
test/: ASTSpec.hs  EvaluatorSpec.hs  ParserSpec.hs
