name:                scheme48h
version:             1.0
author:              Kjetil Valle
maintainer:          kjetil.valle@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Parser
  build-depends:       base >=4.7 && <4.8, parsec >=3.1 && <3.2, array >=0.5 && <0.6
  hs-source-dirs:      src
  default-language:    Haskell2010

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Other-Modules:        ParserSpec
  Build-Depends:        base
                      , hspec >= 1.3
                      , QuickCheck
                      , scheme48h
                      , parsec >=3.1 && <3.2
                      , array >=0.5
